# StickyNotes

./: .gitignore  AppHeader.qml  CMakeLists.txt  COPYING  COPYING.LESSER  CommandDialog.qml  CommandListView.qml  CommandManager.cpp  CommandManager.h  LICENSE  Main.qml  README.md  README.zh-CN.md  SidebarTreeView.qml  main.cpp  package_deb.sh  package_manual.sh  package_with_cqtdeployer.sh  run.sh  stickynotes.rc
cmdbox_dist/: AppRun  cmdbox
cmdbox_dist/qml/Qt/labs/assetdownloader/: libqmlassetdownloaderplugin.prl
qml/: AboutDialogView.qml  AppHeader.qml  CButton.qml  CommandBlok.qml  CommandDialogView.qml  CommandGroupView.qml  CommandWorkspaceView.qml  CopyNotificationView.qml  ExportDialogView.qml  HeadManubarView.qml  HeaderToolbarView.qml  ImportDialogView.qml  Main.qml  MainDataListView.qml  ShortcutGuideDialog.qml  SidebarTreeView.qml
src/: CommandManager.cpp
src/include/: CommandManager.h
